--- a/styles.css
+++ b/styles.css
@@ -123,11 +123,11 @@ section {
 }
 
 #oficinas .card {
-    margin: 20px 0;
+    margin: 20px;
 }
 
 #oficinas .card-body {
-    padding: 10px;
+    padding: 10px 10px 20px;
 }
 
 #oficinas  p {
@@ -141,7 +141,6 @@ section {
 .cartao-oficina .card-body {
     font-size: 1.25rem;
 }
-
 
 .cartao-oficina {
     background-color: #00002d;
@@ -178,7 +177,7 @@ section {
 }
 
 .icone-rodape:link, .icone-rodape:visited {
-    margin: 0 50px;
+    margin: 0 40px;
     color: #FFFFFF;
 }
 
