--- a/styles.css
+++ b/styles.css
@@ -123,7 +123,13 @@ section {
 }
 
 #oficinas .card {
-    margin: 20px;
+    margin: 30px;
+}
+
+@media (max-width: 1200px) {
+    #oficinas .card {
+        margin: 5px;
+    }
 }
 
 #oficinas .card-body {
