--- a/styles.css
+++ b/styles.css
@@ -134,6 +134,9 @@ section {
 }
 
 @media (max-width: 1200px) {
+    #oficinas {
+        padding: 60px 10px;
+    }
     #oficinas .card {
         margin: 20px 5px;
     }
