--- a/styles.css
+++ b/styles.css
@@ -173,7 +173,22 @@ section {
 /* Contato */
 
 #contato {
-    background-color: #FFFFFF;
+    background-color:#FFFFFF;
+    font-size: 1.75rem;
+}
+
+#contato a {
+    color: #000000;
+}
+
+#contato a:hover {
+    color: darkgray;
+    text-decoration: none;
+}
+
+.icone-contato {
+    display: inline-block;
+    margin-right: 15px;
 }
 
 /* Rodapé */
@@ -201,4 +216,6 @@ section {
 
 .icone-rodape {
     font-size: 2.5rem;
+    display: inline-block;
+    margin-right: 20px;
 }
