--- a/styles.css
+++ b/styles.css
@@ -11,6 +11,7 @@ Azul: #06123C
 html {
     margin: 0;
     padding: 0;
+    scroll-behavior: smooth;
 }
 
 body {
@@ -66,7 +67,6 @@ section {
 
 /* Fundação */
 
-
 #fundacao {
     background-color: #06123C;
     color: #FFFFFF;
@@ -102,7 +102,7 @@ section {
 }
 
 .imagem-carrossel {
-    height: 300px;
+    height: 500px;
     margin: 40px;
 }
 
@@ -130,7 +130,7 @@ section {
 }
 
 #oficinas .card {
-    margin: 30px;
+    margin: 10px;
 }
 
 @media (max-width: 1200px) {
@@ -176,6 +176,16 @@ section {
 #contato {
     background-color:#FFFFFF;
     font-size: 1.75rem;
+    white-space: nowrap;
+}
+
+@media (max-width:1200px) {
+    #contato {
+        padding-left: 10%;
+    }
+    .ultima-coluna-contato {
+        text-align: center;
+    }
 }
 
 #contato a {
@@ -190,6 +200,10 @@ section {
 .icone-contato {
     display: inline-block;
     margin-right: 15px;
+}
+
+.titulo-contato {
+    padding-bottom: 30px;
 }
 
 /* Rodapé */
@@ -219,4 +233,13 @@ section {
     font-size: 2.5rem;
     display: inline-block;
     margin-right: 20px;
+}
+
+@media (min-width: 1200px) {
+    .instagram {
+        text-align: right;
+    }
+    .facebook {
+        text-align: left;
+    }
 }
