--- a/styles.css
+++ b/styles.css
@@ -97,13 +97,13 @@ section {
 #carrossel {
     background-color: #06123C;
     text-align: center;
-    padding-top: 20px;
-    padding-bottom: 20px;
+    /*padding-top: 20px;
+    padding-bottom: 20px;*/
 }
 
 .imagem-carrossel {
-    height: 500px;
-    margin: 40px;
+    width: 100%;
+    /*margin: 40px;*/
 }
 
 @media (max-width: 1200px) {
